Hotfix to fix navbar logo image on firefox

--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -41,6 +41,7 @@ nav {
 
 .navbar-image {
 	height: 75%;
+	width: 200px;
 }
 
 .navbar-mobile {
